Add initial site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-<h1>Testing</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>30 Cubits - Building awesome software.</title>
+    <link href='/stylesheets/screen.css' media='all' rel='stylesheet' type='text/css' />
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js' type='text/javascript'></script>
+    <script src='/javascripts/application.js' type='text/javascript'></script>
+  </head>
+  <body>
+    <div id='container'>
+      <header class='page-header'>
+        <hgroup>
+          <h1>
+            <img alt='30 Cubits' src='/images/logo-large.png' />
+          </h1>
+          <h2>
+            Building
+            <strong>awesome</strong>
+            software.
+          </h2>
+        </hgroup>
+      </header>
+      <div id='content'>
+        <section>
+          <h1>Contact</h1>
+          <ul>
+            <li>
+              <h2>
+                <a href='mailto:joey@30cubits.com'>joey@30cubits.com</a>
+              </h2>
+            </li>
+            <li>
+              <h2>
+                <a href='http://twitter.com/30cubits'>@30cubits</a>
+              </h2>
+            </li>
+            <li>
+              &nbsp;
+            </li>
+            <li>
+              <h2>
+                <a href='http://joeybeninghove.com'>joeybeninghove.com</a>
+              </h2>
+            </li>
+            <li>
+              <h2>
+                <a href='http://twitter.com/joeybeninghove'>@joeybeninghove</a>
+              </h2>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h1>Projects</h1>
+          <ul>
+            <li>
+              <h2>
+                <a href='http://castingcode.tv'>CastingCode.tv</a>
+              </h2>
+            </li>
+            <li>
+              <h2>
+                <a href='http://codertalkshow.com'>Coder Talk</a>
+              </h2>
+            </li>
+            <li>
+              <h2>
+                <a href='http://vimconf.org'>VimConf</a>
+              </h2>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <footer>
+        <small>
+          powered by
+          <a href='https://github.com/joeybeninghove/fun'>fun</a>
+        </small>
+        <small class='copyright'>
+          Copyright &copy; 2011 30 Cubits, LLC
+        </small>
+      </footer>
+    </div>
+  </body>
+</html>
