Adding backbonescreencasts.com link

--- a/index.html
+++ b/index.html
@@ -22,6 +22,31 @@
       </header>
       <div id='content'>
         <section>
+          <h1>Projects</h1>
+          <ul>
+            <li>
+              <h2>
+                <a href='http://backbonescreencasts.com'>Backbone.js Screencasts</a>
+              </h2>
+            </li>
+            <li>
+              <h2>
+                <a href='http://castingcode.tv'>CastingCode.tv</a>
+              </h2>
+            </li>
+            <li>
+              <h2>
+                <a href='http://codertalkshow.com'>Coder Talk</a>
+              </h2>
+            </li>
+            <li>
+              <h2>
+                <a href='http://vimconf.org'>VimConf</a>
+              </h2>
+            </li>
+          </ul>
+        </section>
+        <section>
           <h1>Contact</h1>
           <ul>
             <li>
@@ -45,26 +70,6 @@
             <li>
               <h2>
                 <a href='http://twitter.com/joeybeninghove'>@joeybeninghove</a>
-              </h2>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h1>Projects</h1>
-          <ul>
-            <li>
-              <h2>
-                <a href='http://castingcode.tv'>CastingCode.tv</a>
-              </h2>
-            </li>
-            <li>
-              <h2>
-                <a href='http://codertalkshow.com'>Coder Talk</a>
-              </h2>
-            </li>
-            <li>
-              <h2>
-                <a href='http://vimconf.org'>VimConf</a>
               </h2>
             </li>
           </ul>
