--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
             <img alt='30 Cubits' src='/images/logo-large.png' />
           </h1>
           <h2>
-            Building
+            Build
             <strong>awesome</strong>
             software.
+            Have
+            <strong>fun.</strong>
           </h2>
         </hgroup>
       </header>
