Adding mijireh and cloudswipe

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
           <ul>
             <li>
               <h2>
+                <a href='http://cloudswipe.com'>CloudSwipe</a>
+              </h2>
+            </li>
+            <li>
+              <h2>
+                <a href='http://mijireh.com'>Mijireh</a>
+              </h2>
+            </li>
+            <li>
+              <h2>
                 <a href='http://backbonescreencasts.com'>Backbone.js Screencasts</a>
               </h2>
             </li>
