--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
           <ul>
             <li>
               <h2>
+                <a href='http://cart66.com'>Cart66</a>
+              </h2>
+            </li>
+            <li>
+              <h2>
                 <a href='http://cloudswipe.com'>CloudSwipe</a>
               </h2>
             </li>
@@ -38,22 +43,7 @@
             </li>
             <li>
               <h2>
-                <a href='http://backbonescreencasts.com'>Backbone.js Screencasts</a>
-              </h2>
-            </li>
-            <li>
-              <h2>
-                <a href='http://castingcode.tv'>CastingCode.tv</a>
-              </h2>
-            </li>
-            <li>
-              <h2>
-                <a href='http://codertalkshow.com'>Coder Talk</a>
-              </h2>
-            </li>
-            <li>
-              <h2>
-                <a href='http://vimconf.org'>VimConf</a>
+                <a href='http://hurricane.io'>Hurricane</a>
               </h2>
             </li>
           </ul>
@@ -76,7 +66,7 @@
             </li>
             <li>
               <h2>
-                <a href='http://joeybeninghove.com'>joeybeninghove.com</a>
+                <a href='http://joey.io'>joey.io</a>
               </h2>
             </li>
             <li>
@@ -88,12 +78,8 @@
         </section>
       </div>
       <footer>
-        <small>
-          powered by
-          <a href='https://github.com/joeybeninghove/fun'>fun</a>
-        </small>
         <small class='copyright'>
-          Copyright &copy; 2012 30 Cubits, LLC
+          Copyright &copy; 2015 30 Cubits, LLC
         </small>
       </footer>
     </div>
