--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>30 Cubits - Building awesome software.</title>
+    <title>30 Cubits - Builder of awesome web applications</title>
     <link href='/stylesheets/screen.css' media='all' rel='stylesheet' type='text/css' />
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js' type='text/javascript'></script>
     <script src='/javascripts/application.js' type='text/javascript'></script>
@@ -13,13 +13,6 @@
           <h1>
             <img alt='30 Cubits' src='/images/logo-large.png' />
           </h1>
-          <h2>
-            Build
-            <strong>awesome</strong>
-            software.
-            Have
-            <strong>fun.</strong>
-          </h2>
         </hgroup>
       </header>
       <div id='content'>
@@ -28,22 +21,12 @@
           <ul>
             <li>
               <h2>
-                <a href='http://cart66.com'>Cart66</a>
+                <a href='https://cart66.com'>Cart66</a>
               </h2>
             </li>
             <li>
               <h2>
-                <a href='http://cloudswipe.com'>CloudSwipe</a>
-              </h2>
-            </li>
-            <li>
-              <h2>
-                <a href='http://mijireh.com'>Mijireh</a>
-              </h2>
-            </li>
-            <li>
-              <h2>
-                <a href='http://hurricane.io'>Hurricane</a>
+                <a href='https://cloudswipe.com'>CloudSwipe</a>
               </h2>
             </li>
           </ul>
@@ -79,7 +62,7 @@
       </div>
       <footer>
         <small class='copyright'>
-          Copyright &copy; 2015 30 Cubits, LLC
+          Copyright &copy; 30 Cubits, LLC
         </small>
       </footer>
     </div>
